--- a/D1/W1-P1.md
+++ b/D1/W1-P1.md
@@ -6,7 +6,7 @@
 
 2. Cos'è una variabile? Prova a spiegarlo con parole tue, come se lo dovessi spiegare a qualcuno che non ne capisce niente di informatica.
 
-   Una variabile una sorta di scatola o contenitore in cui è possibile memorizzare un tipo di valore o informazione. Possiamo immaginare una variabile come a una specie di "etichetta" a cui viene assegnato un valore specifico, che può essere un numero, una parola o qualsiasi altro tipo di informazione.
+   Una variabile è una sorta di scatola o contenitore in cui è possibile memorizzare un tipo di valore o informazione. Possiamo immaginare una variabile come a una specie di "etichetta" a cui viene assegnato un valore specifico, che può essere un numero, una parola o qualsiasi altro tipo di informazione.
    Ad esempio, possiamo pensare a una variabile chiamata "Età", a cui viene assegnato un valore come "32". Questo valore può essere utilizzato in un programma per effettuare dei calcoli o per mostrare informazioni sulla schermata del pc.
    Con l'utilizzo delle variabili un programma può adattarsi a situazioni diverse e cambiare il suo comportamento in base alle informazioni che riceve.
 
